fix: ajuster les z-index pour améliorer la superposition des éléments

--- a/style.css
+++ b/style.css
@@ -630,7 +630,7 @@ h1 {
   position: fixed;
   left: 0;
   top: 0;
-  z-index: 75;
+  z-index: 995;
   pointer-events: none;
   padding: 10px 12px;
   border-radius: 14px;
@@ -1049,7 +1049,7 @@ h1 {
   width: 32px;
   height: 32px;
   pointer-events: none;
-  z-index: 50;
+  z-index: 1000;
   transform: translate(-50%, -50%);
   transition: transform 0.08s linear, filter 0.2s ease;
   mix-blend-mode: screen;
